# WG

./: README.txt  ScopeFunction.hh
CommandLine/: GenericCommandLineException.hh  ICommandLineException.hh
CommandLine/Impl/: GenericCommandLineException.cc  ICommandLineException.cc
CommandLine/build_autotools/: Makefile.am
CommandLine/build_eclipse/: .cproject  .project
Core/: AnyInsertIterator.hh  AutoFunction.hh  BoostIteratorFacadeImpl.hh  Exceptions.hh  SimpleLazyInitor.hh  StlAdaptors.hh
Core/ToReview/: LazyInitor.hh
Core/build_eclipse/: .project  src_parent
ExternalLibsNoInstall/build_autotools/: GTestFlags.am  Makefile.am
ExternalLibsPkg/: .gitignore
ExternalLibsPkg/build_autotools/: Makefile.am
GTest/: Exceptions.hh
GTest/Tests/: ExceptionsUnitTest.cc  RedirectEventListener.cc  RedirectEventListener.hh  TestMain.cc
GTest/Tests/build_autotools/: Makefile.am
GTest/build_autotools/: Makefile.am
Local/: AutoFunction.hh  AutoFunction2.hh  AutoFunctionV1.hh  AutoFunctor.hh  AutoFunctorSpec.txt  AutoFunctorV1.hh  Documentation.odt  LclClass.hh  LclClass.txt  LclClassSpec.txt  LclContext.hh  LclContext.odt  LclContextSpec.txt  LclFunction.hh  LclFunction.odt  LclFunctionSpec.txt  PP.hh  PP_Seq.hh  TODO.txt
Local/Detail/: AltSeq.hh  Binder.hh  BoundVars.hh  ExpandN.hh  Keywords.hh  PP.hh  PP_AltSeq.hh  PP_Seq.hh  Seq.hh  SplitHeadFromTokens.hh  TokenMatching.hh
Local/Detail/AutoSimulator/: AutoSimulator.hh
Local/Detail/BackEnd/: Forwarder.hh  ID.hh  LocalOperandSyntaxCheck.hh  SymbolTable.hh  SymbolTableUtil.hh  Type.hh  TypeDeducer.hh  TypeExtractor.hh
Local/Detail/FrontEnd/: AssignToDclnNormalize.hh  BoundTupleSeq.hh  BoundVarDclnNormalize.hh  NamedParamParser.hh  SetVarDclnNormalize.hh  SplitHeadFromTokens.hh  VarDcln.hh  VarDclnExplicit.hh  VarDclnImplicit.hh
Local/Detail/LValueBinder/: AutoAny.hh
Local/Detail/LclCLass/: Initializer.hh
Local/Detail/LclContext/: AdhocScopeManagerProxyCpp03.hh  AdhocScopeManagerProxyCpp11.hh  ExtantScopeMngrProxy.hh  NoopScopeManager.hh  ScopeManagerGroup.hh  TypeWrapper.hh
Local/Detail/LclFunction/: BaseFunctorType.hh  BaseFunctorTypeCPP03.hh  BaseFunctorTypeCPP11.hh  Binder.hh  GlobalFunctorBaseType.hh  GlobalFunctorTypeCPP03.hh  GlobalFunctorTypeCPP11.hh
Local/Detail/PP/: AltSeq.hh  Keywords.hh  PP.hh  Seq.hh  TokenMatching.hh  Utils.hh
Local/Detail/RValueSimulator/: AutoAny.hh  Capture.hh  Config.hh  RValueSimulator.hh  TypeOf.hh  TypeWrapper.hh
Local/Detail/Tests/: PPUnitTest.cc  SeqUnitTest.cc  TokenMatchUnitTest.cc
Local/Docs/: LclContext.odt  LclContext.xhtml  LclFunction.odt  LclFunction.xhtml
Local/Tests/: TestHelper.hh
Local/Tests/AutoFunction/: AutoFunctionPPTest.cc  AutoFunctionUnitTest.cc  UnitTest.cc
Local/Tests/AutoFunctor/: AllCombo.cc  AllComboTpl.cc  AssignTo.cc  AssignToTpl.cc  ExplicitBoundParams.cc  ExplicitMixedParams.cc  ExplicitSetParams.cc  ImplicitBoundParams.cc  LocalTypes.cc  MemBindExplicit.cc  MemBindExplicitAndImplicit.cc  MemBindExplicitAndImplicitTpl.cc  MemBindExplicitAndMemSetExplicit.cc  MemBindExplicitAndMemSetExplicitTpl.cc  MemBindExplicitAndMemSetImplicit.cc  MemBindExplicitAndMemSetImplicitTpl.cc  MemBindExplicitTpl.cc  MemBindImplicit.cc  MemBindImplicitAndMemSetExplicit.cc  MemBindImplicitAndMemSetExplicitTpl.cc  MemBindImplicitAndMemSetImplicit.cc  MemBindImplicitAndMemSetImplicitTpl.cc  MemBindImplicitTpl.cc  MemSetExplicit.cc  MemSetExplicitAndImplicit.cc  MemSetExplicitAndImplicitTpl.cc  MemSetExplicitTpl.cc  MemSetImplicit.cc  MemSetImplicitTpl.cc  MixedImplicitAndExplicitBoundParams.cc  MixedParamsSetAndBoundExplicitly.cc  MixedParamsSetAndBoundImplicitly.cc  Nested.cc  NestedTpl.cc  NoSpec.cc  NoSpecTpl.cc  ParamBindExplicit.cc  ParamBindExplicitAndImplicit.cc  ParamBindExplicitAndImplicitTpl.cc  ParamBindExplicitAndParamSetExplicit.cc  (+26 more)
Local/Tests/AutoFunctorV1/: UnitTest.cc
Local/Tests/Compiler_Bugs/: GCC_4.3.2_Number_37140_using_stmt_templated_base_class_nested_type_broken.txt  GCC_4.7.2_Number_52688_Static_vars_of_member_functions_of_template_classes_inaccessible_from_local_classes.txt
Local/Tests/LclClass/: AllCombo.cc  AllComboTpl.cc  BaseClasses.hh  BaseInit.cc  BaseInitTpl.cc  Derives.cc  DerivesTpl.cc  ErrorReporting.cc  ErrorReportingTpl.cc  InitHook.cc  InitHookTpl.cc  MacroParamNamesAsVarNames.cc  MemDecl.cc  MemDeclTpl.cc  MemExtAndMemInt.cc  MemExtAndMemIntTpl.cc  MemExtExplicit.cc  MemExtExplicitAndImplicit.cc  MemExtExplicitAndImplicitTpl.cc  MemExtExplicitTpl.cc  MemExtImplicit.cc  MemExtImplicitTpl.cc  MemIntExplicit.cc  MemIntExplicitAndImplicit.cc  MemIntExplicitAndImplicitTpl.cc  MemIntExplicitTpl.cc  MemIntImplicit.cc  MemIntImplicitTpl.cc  MemLike.cc  MemLikeTpl.cc  MemSetExplicit.cc  MemSetExplicitAndImplicit.cc  MemSetExplicitAndImplicitTpl.cc  MemSetExplicitTpl.cc  MemSetImplicit.cc  MemSetImplicitTpl.cc  MultipleUseInSameMacro.cc  MultipleUseInSameMacroTpl.cc  Nested.cc  NestedTpl.cc
Local/Tests/LclContext/: Adhoc.cc  AdhocBoundVar.cc  AdhocEnterAndExitSpecified.cc  AdhocEnterSpecified.cc  AdhocExitSpecified.cc  (+13 more)
Local/Tests/build_autotools/: Makefile.am
Local/build_autotools/: Makefile.am
Utils/: AutoFunction.hh  AutoFunction2.hh  ClassMethodDisablers.hh  PP.hh  PP_AltSeq.hh  PP_Seq.hh  ScopeFunction.hh  ScopeStdStreamRedirector.hh  ScopedStdStreamRedirector.hh
Utils/Impl/: ScopeStdStreamRedirector.cc  ScopedStdStreamRedirector.cc
Utils/Tests/build_autotools/: Makefile.am
Utils/build_autotools/: Makefile.am
build_autotools/: .gitignore  Makefile.am  README.txt  StandardCppFlags.am  TopLevelDist.am  autogen.sh  configure.ac
build_autotools/Autotools/: TopLevelDist.am  autogen.sh
build_autotools/Autotools/m4/: arg_dist.m4  ax_arg_boost_binary_libs.m4  ax_arg_boost_headers.m4  ax_arg_gtest.m4  ax_arg_gtest_builtin.m4  ax_arg_icu.m4  ax_arg_sqlite3.m4
build_autotools/m4/: arg_dist.m4  ax_arg_boost_headers.m4  ax_arg_gtest_builtin.m4  wg.m4
build_eclipse/: .cproject  .project  ReadMe.txt  project
build_eclipse/CommandLine/: .cproject  .project
build_eclipse/Core/: .cproject  .project
(+241 files in other folders)
