include $(top_srcdir)/StandardCppFlags.am

###########################
#Declare programs and libs.
###########################

lib_LTLIBRARIES = \
    libwaveglider_commandline.la

########
#Sources
########

libwaveglider_commandline_la_SOURCES = \
    ./src/Impl/GenericCommandLineException.cc \
    ./src/Impl/ICommandLineException.cc 

####################
#Preprocessor Flags.
####################

###############
#Compiler Flags
###############

##############
#Linker Flags.
##############

