include $(top_srcdir)/StandardCppFlags.am

if ENABLED_GTEST
    TESTDIR = ../Tests/build_autotools
endif

SUBDIRS = \
    . \
    $(TESTDIR)

###########################
#Declare programs and libs.
###########################

lib_LTLIBRARIES = 

########
#Sources
########

installheadersdir = $(includedir)/WG/Local/
#TODO
installheaders_HEADERS = 

####################
#Preprocessor Flags.
####################

###############
#Compiler Flags
###############

##############
#Linker Flags.
##############